2006-06-14 22:45 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.[hm]: Added new deactivateEditors and
	reactivateEditors methods.
	* GormCore/GormGormWrapperBuilder.m: Moved connection
	name/object swap here for gorm format.
	* Gorm.m: Calling new deactivate/reactivateEditors

2006-06-14 01:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Addition of GormNibWrapperLoader to the
	makefile.
	* GormCore/GormClassManager.[hm]: Correction for nib classes loading.
	* GormCore/GormDocument.h:  Added include for GSNibContainer
	* GormCore/GormDocument.m: In NSNibConnector category which 
	implements "isEqual" check if it's the same "kind of class".  If
	not return NO.
	* GormCore/GormGormWrapperBuilder.m: Corrections for connection
	persistence issues.
	* GormCore/GormGormWrapperLoader.m: Corrections for connection
	persistence issues.
	* GormCore/GormNibWrapperLoader.m: Initial cut at class to build the
	nib wrapper.
	* GormCore/GormPrivate.[hm]: Added encoding changes to 
	GormObjectProxy and GormCustomView to allow them to handle
	NSCustomObject and NSCustomView respectively
	* Gorm.m: In testing, don't substitute the browser either.

2006-06-10 21:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGormWrapperLoader.m: removed uneeded sound/image
	logic.  That is in the parent class.

2006-06-10 10:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Removed code that does name/obj 
	substitution in connections.
	* GormCore/GormGormWrapperBuilder.m: Added code which handles
	name/obj substitution.
	* Gorm.m: Corrected issues with testing.

2006-06-10 09:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GModelDecoder.m: Changes to make this compile with
	new modifications.
	* GormCore/GNUmakefile: Addition of new files.
	* GormCore/GormCustomView.m:Encoding changes for NSCustomView.
	* GormCore/GormDocumentController.m: Removed touch, so that it